--- a/project1/public/assets/index.css
+++ b/project1/public/assets/index.css
@@ -1,134 +1,25 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: pink; 
-    margin: 0;
-    padding: 0;
-  }
-
-#homepage {
-    width: calc(90% - 1ch);
-    margin: 0 auto;
-  }
-  
-header {
-    background-color: plum; 
-    width: calc(100% - 1ch);
-    display: inline-block;
-    text-align: center;
-  }
-
-
-  
-.primary-nav ul {
-    list-style: none;
-    padding: 10px 0;
-    margin: 0;
-    justify-content: center;
-    list-style-type: none;
-    gap: 20px;
-    
-  }
-  
-.primary-nav a {
-    text-decoration: none;
-    color: blue; 
-    text-decoration: underline;
-    display: inline-block;
-    padding: 10px 20px;
-  }
-
-.menu {
-    padding: 10px 0;
+body { 
+  font-family: Arial, sans-serif;
+  background-color: pink; 
+  margin: 0;
+  padding: 0; 
 }
-  
-.menu a:hover {
-    text-decoration: underline;
-    background-color: purple;
-    color: white;
-  }
 
-.menu li {
-    display: inline-block;
-    padding: 10px 20px 10px 20px;
-  }
-  
-.local-menu {
-    background-color: pink; 
-    width: 16%;
-    text-align: start;
-    display: inline-block;
-    vertical-align: top;
-  }
-
-.local-menu li {
-    display: block;
-    padding: 30px 0;
-  }
-
-.local-menu ul {
-    list-style: none;
-    
-  }
-  
-.local-menu a {
-    text-decoration: none;
-    color: blue; 
-    display: inline-block;
-    padding: 15px 20px 15px 20px;
-  }
-  
-.local-menu a:hover {
-    text-decoration: underline;
-    background-color: plum;
-  }
-
-.local-menu .main {
-    background-color: pink; 
+#homepage { 
+  width: calc(90% - 1ch);
+  margin: 0 auto; 
 }
-  
-main {
-    width: calc(80% - 1ch);
-    display: inline-block;
-    padding: 10px 20px;
-    border-left: 1px solid black;
-  }
-  
-main p {
-    line-height: 1.5;
-    color: black; 
-    margin-bottom: 20px;
-    padding: 10px 0;
-    text-align: start;
-  }
-  
-footer {
-    background-color: plum; 
-    text-align: center;
-    color: black; 
-    font-size: 14px;
-    width: calc(100% - 1ch);
-    padding: 10px 2px;
-  }
-  
-footer a {
-    color: blue;
-    text-decoration: underline;
-    font-weight: bold;
-  }
-  
-footer a:hover {
-    text-decoration: underline;
-  }
 
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-  }
-
+header { 
+  background-color: plum; 
+  width: calc(100% - 1ch);
+  display: inline-block;
+  text-align: center; 
+}
 
 .navbar {
   overflow: hidden;
-  background-color: #333; 
+  background-color: #333;
 }
 
 .navbar a {
@@ -140,12 +31,12 @@ footer a:hover {
   text-decoration: none;
 }
 
-.subnav {
+.dropdown {
   float: left;
   overflow: hidden;
 }
 
-.subnav .subnavbtn {
+.dropdown .dropbtn {
   font-size: 16px;  
   border: none;
   outline: none;
@@ -156,81 +47,97 @@ footer a:hover {
   margin: 0;
 }
 
-.navbar a:hover, .subnav:hover .subnavbtn {
+.navbar a:hover, .dropdown:hover .dropbtn {
   background-color: red;
 }
 
-.subnav-content {
+.dropdown-content {
   display: none;
   position: absolute;
-  left: 0;
-  background-color: red;
-  width: 100%;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-.subnav-content a {
-  float: left;
-  color: white;
-  text-decoration: none;
-}
-
-.subnav-content a:hover {
-  background-color: #eee;
+.dropdown-content a {
+  float: none;
   color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
-.subnav:hover .subnav-content {
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
   display: block;
 }
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 500px;
-  margin: auto;
-  text-align: center;
-  font-family: arial;
+.card { 
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+max-width: 500px;
+margin: auto;
+text-align: center;
+font-family: arial; 
 }
 
-.title {
-  color: grey;
-  font-size: 18px;
+.title { 
+color: grey;
+font-size: 18px; 
 }
 
-button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  font-size: 18px;
-  width: 50%;
+button { 
+border: none;
+outline: 0;
+display: inline-block;
+padding: 8px;
+color: white;
+background-color: #000;
+text-align: center;
+cursor: pointer;
+font-size: 18px;
+width: 50%; 
 }
 
-a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
+a { 
+text-decoration: none;
+font-size: 22px;
+color: black; 
 }
 
-button:hover, a:hover {
-  opacity: 0.7;
+button:hover, a:hover { 
+opacity: 0.7; 
 }
 
-.col-3 {
-  width: 25%; 
-  float: left;
+.col-3 { 
+width: 25%; 
+float: left; 
 }
 
-.col-4 {
+.col-4 { 
   width: 33.33%; 
-  float: left;
+  float: left; 
 }
 
-.col-12 {
-  width: 100%; 
-  float: left;
+footer { 
+  background-color: plum; 
+  text-align: center;
+  color: black; 
+  font-size: 14px;
+  width: calc(100% - 1ch);
+  padding: 10px 2px; 
+}
+
+footer a { 
+  color: blue;
+  text-decoration: underline;
+  font-weight: bold; 
+}
+
+footer a:hover { 
+  text-decoration: underline; 
 }
