--- a/project1/public/assets/index.css
+++ b/project1/public/assets/index.css
@@ -1,6 +1,6 @@
 body { 
   font-family: Arial, sans-serif;
-  background-color: pink; 
+  background-color: #333; 
   margin: 0;
   padding: 0; 
 }
@@ -11,22 +11,27 @@ body {
 }
 
 header { 
-  background-color: plum; 
+  background-color: rgb(74, 12, 74); 
   width: calc(100% - 1ch);
   display: inline-block;
   text-align: center; 
 }
 
+#logo {
+  width: 50px;
+  height: auto;
+  display: block;
+}
+
 .navbar {
-  overflow: hidden;
   background-color: #333;
 }
 
 .navbar a {
   float: left;
   font-size: 16px;
-  color: white;
-  text-align: center;
+  color: #333;
+  text-align: top;
   padding: 14px 16px;
   text-decoration: none;
 }
@@ -40,7 +45,7 @@ header {
   font-size: 16px;  
   border: none;
   outline: none;
-  color: white;
+  color: darkgray;
   padding: 14px 16px;
   background-color: inherit;
   font-family: inherit;
@@ -48,13 +53,14 @@ header {
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: rgb(28, 21, 21);
+  width: 100%;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: #a25d96;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -71,6 +77,7 @@ header {
 
 .dropdown-content a:hover {
   background-color: #ddd;
+  width: 100%;
 }
 
 .dropdown:hover .dropdown-content {
