--- a/project1/public/assets/index.css
+++ b/project1/public/assets/index.css
@@ -109,6 +109,14 @@ header {
   width: 100%; 
 }
 
+.card-paragraph { 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background: white;
+  text-align: center;
+  padding: 2px;
+  border-radius: 8px;
+  width: 100%; 
+}
 
 .card img {
   width: 100%;
@@ -136,6 +144,60 @@ button {
 
 button:hover {
   opacity: 0.7; 
+}
+
+.grid-container4 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 20px;
+}
+
+.card-form {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  max-width: 400px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  font-size: 16px;
+  margin-bottom: 5px;
+}
+
+input, select {
+  max-width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="checkbox"] {
+  width: auto;
+  margin-right: 10px;
+}
+
+input[type="submit"] {
+  background-color: #000;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 4px;
+}
+
+input[type="submit"]:hover {
+  opacity: 0.8;
 }
 
 footer { 
