--- a/project2/public/styles.css
+++ b/project2/public/styles.css
@@ -7,24 +7,59 @@ body {
 
 .header {
     display: flex;
+    flex-direction: column; 
     align-items: center;
-    justify-content: space-between;
+    text-align: center;
+    width: 100%;
+    padding: 1rem;
     background-color: burlywood;
+}
+
+
+.logo-title {
+    position: relative;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    width: 100%;
     padding: 1rem;
 }
 
+
 .logo {
-    width: 100px;
+    position: absolute;
+    left: 0;
+    width: 80px;
+    height: auto;
+    padding: 1rem;
+}
+
+
+.logo-title h1 {
+    margin: 0 auto;
+    text-align: center;
 }
 
 
 .nav {
     display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 10px;
 }
 
 .nav-links {
     display: flex;
-    gap: 1rem;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    list-style: none;
+    padding: 0;
+}
+
+.nav-links li {
+    display: inline-block;
+    margin: 0 15px; 
 }
 
 .hamburger {
@@ -64,10 +99,6 @@ body {
 .content-box img {
     width: 200px;
     height: auto;
-}
-
-.content-box.reverse {
-    flex-direction: row-reverse;
 }
 
 
@@ -147,7 +178,7 @@ dialog::backdrop {
 
 
 .footer {
-    background: black;
+    background: burlywood;
     color: white;
     padding: 1rem;
     text-align: center;
