--- a/work/10-react-components/components/src/index.css
+++ b/work/10-react-components/components/src/index.css
@@ -1,4 +1,13 @@
-/* Reset / Base Styles */
+html, body {
+  height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -14,11 +23,19 @@ body {
 }
 
 main {
+  flex: 1;
   padding: 2rem 0;
 }
 
-/* Header and Footer */
-header, footer {
+header {
+  background-color: #333;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
+
+footer {
+  margin-top: auto;
   background-color: #333;
   color: white;
   padding: 1rem;
@@ -39,7 +56,7 @@ nav button:hover {
   color: #ffcc00;
 }
 
-/* Pages Layout */
+
 section {
   max-width: 800px;
   margin: auto;
@@ -51,12 +68,16 @@ section {
 
 .btn-regular {
   padding: 0.5rem 1rem;
+  margin: 20px;
   background-color: #444;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 1rem;
+  width: max-content;
+  display:flex;
+  justify-content: center;
 }
 
 .btn-regular:hover {
@@ -76,7 +97,7 @@ section {
   color: darkblue;
 }
 
-/* Cards */
+
 .cards {
   display: flex;
   flex-wrap: wrap;
@@ -96,10 +117,10 @@ section {
   margin-bottom: 0.5rem;
 }
 
-/* Panels */
+
 .panel {
   display: flex;
-  gap: 1rem;
+  gap: 10rem;
   align-items: center;
 }
 
@@ -112,12 +133,18 @@ section {
   flex: 1;
 }
 
-/* Modal */
 dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
   border: none;
   border-radius: 8px;
   padding: 2rem;
-  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+  width: 300px; 
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.25);
+  z-index: 100;
 }
 
 dialog::backdrop {
