adding and polishing features for the shopping experience with images and css styling

--- a/final/online-grocery/src/styles/navbar.css
+++ b/final/online-grocery/src/styles/navbar.css
@@ -26,4 +26,11 @@
   
   .navbar__user {
     font-size: 1rem;
+    color: green;
+  }
+
+  .navbar__logo {
+    width: 80px;
+    height: 80px;
+    object-fit: contain;
   }
