--- a/final/online-grocery/src/styles/layout.css
+++ b/final/online-grocery/src/styles/layout.css
@@ -1,13 +1,14 @@
-/* layout.css */
-
 html, body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  height: 100%;
 }
 
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
 main {
   flex: 1;
@@ -15,12 +16,12 @@ main {
 }
 
 .footer {
-  margin-top: auto;
   text-align: center;
   padding: 1rem;
   background-color: #f5f5f5;
   font-size: 0.875rem;
 }
+
 
 
 .skiplink {
@@ -42,4 +43,36 @@ main {
   padding: 1rem;
   z-index: 1000;
 }
-  
+
+.btn-regular {
+  padding: 0.5rem 1rem;
+  margin: 20px;
+  background-color: green;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+  width: max-content;
+  display:flex;
+  justify-content: center;
+}
+
+.btn-regular:hover {
+  background-color: bisque;
+  color: black;
+}
+
+.btn-link {
+  background: none;
+  border: none;
+  color: blue;
+  cursor: pointer;
+  text-decoration: underline;
+  font-size: 1rem;
+  margin-top: 1rem;
+}
+
+.btn-link:hover {
+  color: darkblue;
+}
