--- a/final/online-grocery/src/styles/productcard.css
+++ b/final/online-grocery/src/styles/productcard.css
@@ -1,5 +1,5 @@
 .product-card {
-    background-color: #fff;
+    background-color: #be4242;
     border: 1px solid #ddd;
     padding: 1rem;
     border-radius: 8px;
