--- a/final/online-grocery/src/styles/ToastModal.css
+++ b/final/online-grocery/src/styles/ToastModal.css
@@ -1,16 +1,16 @@
 .toast-modal {
-position: fixed;
-top: 30%;
-left: 50%;
-transform: translate(-50%, -50%);
-padding: 1.5rem;
-border: none;
-border-radius: 8px;
-background-color: #fff;
-box-shadow: 0 0 20px rgba(0,0,0,0.2);
-z-index: 1000;
-max-width: 300px;
-width: 100%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1.5rem;
+    border: none;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    max-width: 300px;
+    width: 100%;
 }
   
 .toast-content {
@@ -24,8 +24,9 @@ text-align: center;
 padding: 0.5rem 1rem;
 font-size: 1rem;
 border: none;
-background: #222;
+background: green;
 color: #fff;
 cursor: pointer;
 border-radius: 4px;
 }
+
