--- a/final/online-grocery/src/styles/form.css
+++ b/final/online-grocery/src/styles/form.css
@@ -1,19 +1,9 @@
-/* 
-.step.active {
-  color: green;
-}
-
-.arrow {
-  font-size: 3rem;
-  color: #ccc;
-} */
-
 .checkout-form {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1.25rem;
-  background-color: #fff;
+  background-color: #dbe9d2;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
@@ -22,6 +12,7 @@
 .form-group {
   display: flex;
   flex-direction: column;
+  color: sienna;
 }
 
 .checkout-form input[type="text"],
@@ -29,11 +20,11 @@
   padding: 0.5rem;
   font-size: 1rem;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid sienna;
 }
 
 .checkout-form fieldset {
-  border: 1px solid #ccc;
+  border: 1px solid sienna;
   padding: 1rem;
   border-radius: 4px;
 }
