--- a/final/online-grocery/src/styles/progressbar.css
+++ b/final/online-grocery/src/styles/progressbar.css
@@ -14,12 +14,14 @@
   justify-content: center;
   gap: 0.5rem;
   padding: 1rem;
-  background-color: #f7f7f7;
   border-radius: 10px;
   font-weight: bold;
   flex-wrap: wrap;
 }
 
+.step {
+  color: #cd8f6e;
+}
 
 .step.active {
   color: green;
